--- a/config/draco/nodelet.yaml
+++ b/config/draco/nodelet.yaml
@@ -5,6 +5,8 @@ vel_damping: 1. # TODO (JH) : Tune this gain
 damping_threshold: 1. # TODO (JH) : Tune this gain
 n_data_for_imu_initialize: 100 # TODO (JH) : Tune this gain
 
+target_joint: "R_Ankle_FE"
+
 service_call:
     conservative: true
     neck_pitch:
