--- a/config/fixed_draco/nodelet.yaml
+++ b/config/fixed_draco/nodelet.yaml
@@ -10,180 +10,180 @@ target_joint: "L_Ankle_IE"
 # May need to use more at hip_fe
 
 service_call:
-    conservative: true
+    conservative: false
     neck_pitch:
         kp: 15.
         kd: 0.
         current_limit: 0.15
         weak_kp: 15.
         weak_kd: 0.
-        weak_current_limit: 0.15
+        weak_current_limit: 0.05
     r_hip_ie:
         kp: 150.
         kd: 1.
         current_limit: 0.3
         weak_kp: 150.
         weak_kd: 1.
-        weak_current_limit: 0.3
+        weak_current_limit: 0.1
     r_hip_aa:
         kp: 400.
         kd: 3.
         current_limit: 0.6
         weak_kp: 400.
         weak_kd: 3.
-        weak_current_limit: 0.6
+        weak_current_limit: 0.2
     r_hip_fe:
         kp: 500.
         kd: 5.
         current_limit: 0.7
         weak_kp: 500.
         weak_kd: 5.
-        weak_current_limit: 0.7
+        weak_current_limit: 0.2
     r_knee_fe:
         kp: 250.
         kd: 1.5
         current_limit: 0.7
         weak_kp: 250.
         weak_kd: 1.5
-        weak_current_limit: 0.7
+        weak_current_limit: 0.2
     r_ankle_fe:
         kp: 150.
         kd: 0.2
         current_limit: 0.3
         weak_kp: 150.
         weak_kd: 0.2
-        weak_current_limit: 0.3
+        weak_current_limit: 0.1
     r_ankle_ie:
         kp: 30.
         kd: 0.1
         current_limit: 0.3
         weak_kp: 30.
         weak_kd: 0.1
-        weak_current_limit: 0.3
+        weak_current_limit: 0.1
     l_hip_ie:
         kp: 150.
         kd: 1.
         current_limit: 0.3
         weak_kp: 150.
         weak_kd: 1.
-        weak_current_limit: 0.3
+        weak_current_limit: 0.1
     l_hip_aa:
         kp: 400.
         kd: 3.
         current_limit: 0.6
         weak_kp: 400.
         weak_kd: 3.
-        weak_current_limit: 0.6
+        weak_current_limit: 0.2
     l_hip_fe:
         kp: 500.
         kd: 5.
         current_limit: 0.7
         weak_kp: 500.
         weak_kd: 5.
-        weak_current_limit: 0.7
+        weak_current_limit: 0.2
     l_knee_fe:
         kp: 250.
         kd: 1.5
         current_limit: 0.7
         weak_kp: 250.
         weak_kd: 1.5
-        weak_current_limit: 0.7
+        weak_current_limit: 0.2
     l_ankle_fe:
         kp: 150.
         kd: 0.2
         current_limit: 0.3
         weak_kp: 150.
         weak_kd: 0.2
-        weak_current_limit: 0.3
+        weak_current_limit: 0.1
     l_ankle_ie:
         kp: 30.
         kd: 0.1
         current_limit: 0.3
         weak_kp: 30.
         weak_kd: 0.1
-        weak_current_limit: 0.3
+        weak_current_limit: 0.1
     l_shoulder_fe:
         kp: 250.
         kd: 7.
         current_limit: 0.7
         weak_kp: 250.
         weak_kd: 7.
-        weak_current_limit: 0.7
+        weak_current_limit: 0.2
     l_shoulder_aa:
         kp: 300.
         kd: 3.
         current_limit: 0.65
         weak_kp: 300.
         weak_kd: 3.
-        weak_current_limit: 0.65
+        weak_current_limit: 0.2
     l_shoulder_ie:
         kp: 60.
         kd: 2.
         current_limit: 0.3
         weak_kp: 60.
         weak_kd: 2.
-        weak_current_limit: 0.3
+        weak_current_limit: 0.2
     l_elbow_fe:
         kp: 100.
         kd: 1.2
         current_limit: 0.3
         weak_kp: 100.
         weak_kd: 1.2
-        weak_current_limit: 0.3
+        weak_current_limit: 0.2
     l_wrist_ps:
         kp: 15.
         kd: 1.
         current_limit: 0.2
         weak_kp: 15.
         weak_kd: 1.
-        weak_current_limit: 0.2
+        weak_current_limit: 0.06
     l_wrist_pitch:
         kp: 7.0
         kd: 0.07
         current_limit: 0.1
         weak_kp: 7.0
         weak_kd: 0.07
-        weak_current_limit: 0.1
+        weak_current_limit: 0.03
     r_shoulder_fe:
         kp: 250.
         kd: 7.
         current_limit: 0.7
         weak_kp: 250.
         weak_kd: 7.
-        weak_current_limit: 0.7
+        weak_current_limit: 0.2
     r_shoulder_aa:
         kp: 300.
         kd: 3.
         current_limit: 0.65
         weak_kp: 300.
         weak_kd: 3.
-        weak_current_limit: 0.65
+        weak_current_limit: 0.2
     r_shoulder_ie:
         kp: 60.
         kd: 2.
         current_limit: 0.3
         weak_kp: 60.
         weak_kd: 2.
-        weak_current_limit: 0.3
+        weak_current_limit: 0.1
     r_elbow_fe:
         kp: 100.
         kd: 1.2
         current_limit: 0.3
         weak_kp: 100.
         weak_kd: 1.2
-        weak_current_limit: 0.3
+        weak_current_limit: 0.1
     r_wrist_ps:
         kp: 15.
         kd: 1.
         current_limit: 0.2
         weak_kp: 15.
         weak_kd: 1.
-        weak_current_limit: 0.2
+        weak_current_limit: 0.06
     r_wrist_pitch:
         kp: 7.0
         kd: 0.07
         current_limit: 0.1
         weak_kp: 7.0
         weak_kd: 0.07
-        weak_current_limit: 0.1
+        weak_current_limit: 0.03
 
