before testing gravity comp

--- a/config/fixed_draco/pnc.yaml
+++ b/config/fixed_draco/pnc.yaml
@@ -54,16 +54,16 @@ wbc:
         # sim gain
         foot_pos:
             weight: 40.
-            kp: [100, 100, 100]
-            kd: [5, 5, 5]
-            #kp: [10, 10, 10]
-            #kd: [0.1, 0.1, 0.1]
+            #kp: [100, 100, 100]
+            #kd: [5, 5, 5]
+            kp: [10, 10, 10]
+            kd: [0.1, 0.1, 0.1]
         foot_ori:
             weight: 40.
-            kp: [100, 100, 100]
-            kd: [5, 5, 5]
-            #kp: [10., 10., 10.]
-            #kd: [0.1, 0.1, 0.1]
+            #kp: [100, 100, 100]
+            #kd: [5, 5, 5]
+            kp: [10., 10., 10.]
+            kd: [0.1, 0.1, 0.1]
 
     joint_integrator:
         vel_cutoff_freq: 2.0 # Hz
@@ -106,9 +106,9 @@ behavior:
     swaying_freq: [0.2, 0., 0.2]
 
 controller:
-    ## TEST
-    waiting_count: -10
-    b_smoothing: false
-    ## TEST END
-    smoothing_duration: 0.5
-    controller_type: 0 # 0: gravity comp, 1: admittance, 2: impedance
+    waiting_count: 10
+    b_smoothing: true
+    #waiting_count: -10
+    #b_smoothing: false
+    smoothing_duration: 1.0
+    controller_type: 2 # 0: gravity comp, 1: admittance, 2: impedance
