test grav comp / admittance / impedance, looking into imu issue

--- a/config/fixed_draco/nodelet.yaml
+++ b/config/fixed_draco/nodelet.yaml
@@ -1,11 +1,8 @@
 contact_threshold: 30. # TODO (JH) : Need to be tuned
 
-imu_servo_rate: 800. # Hz TODO (JH) : Check this with Josh
-vel_damping: 1. # TODO (JH) : Tune this gain
-damping_threshold: 1. # TODO (JH) : Tune this gain
-n_data_for_imu_initialize: 100 # TODO (JH) : Tune this gain
-
 target_joint: "L_Ankle_IE"
+
+b_measure_computation_time: true
 
 # May need to use more at hip_fe
 
