Both hands tested

--- a/config/fixed_draco/pnc.yaml
+++ b/config/fixed_draco/pnc.yaml
@@ -54,27 +54,19 @@ wbc:
         # sim gain
         foot_pos:
             weight: 40.
-            #kp: [100, 100, 100]
-            #kd: [5, 5, 5]
             kp: [100, 100, 250]
             kd: [0.1, 0.1, 1.2]
         foot_ori:
             weight: 40.
-            #kp: [100, 100, 100]
-            #kd: [5, 5, 5]
             kp: [20., 20., 20.]
             kd: [0.1, 0.1, 0.1]
         hand_pos:
             weight: 40.
-            #kp: [100, 100, 100]
-            #kd: [5, 5, 5]
-            kp: [100, 100, 250]
-            kd: [0.1, 0.1, 1.2]
+            kp: [100, 100, 100]
+            kd: [0.1, 0.1, 0.1]
         hand_ori:
             weight: 40.
-            #kp: [100, 100, 100]
-            #kd: [5, 5, 5]
-            kp: [20., 20., 20.]
+            kp: [10., 10., 10.]
             kd: [0.1, 0.1, 0.1]
         neck:
             weight: 20.
@@ -118,9 +110,11 @@ behavior:
         r_wrist_ps: 0.
         l_wrist_pitch: 0.
         r_wrist_pitch: 0.
-    swaying_amp: [0.02, 0., 0.05]
-    swaying_freq: [0.2, 0., 1.0]
+    #swaying_amp: [0.02, 0., 0.05]
+    #swaying_freq: [0.2, 0., 1.0]
 
+    swaying_amp: [0., 0., 0.05]
+    swaying_freq: [0., 0., 0.7]
 controller:
     waiting_count: 10
     b_smoothing: true
