--- a/config/draco/pnc.yaml
+++ b/config/draco/pnc.yaml
@@ -3,7 +3,8 @@ servo_dt: 0.00125
 save_freq: 50
 ip_addr: "tcp://127.0.0.1:5557"
 
-b_exp: false
+#b_exp: false
+b_exp: true
 
 wbc:
     regularization:
@@ -20,13 +21,13 @@ wbc:
             sim_kp: [200, 200, 200]
             sim_kd: [10, 10, 10]
             exp_kp: [20, 20, 20]
-            exp_kd: [1, 1, 1]
+            exp_kd: [0, 0, 0]
         torso_ori:
             weight: 20
             sim_kp: [100, 100, 100]
             sim_kd: [10, 10, 10]
             exp_kp: [20, 20, 20]
-            exp_kd: [1, 1, 1]
+            exp_kd: [0, 0, 0]
         upper_body_joint:
             weight: 20.
             neck_pitch:
@@ -175,4 +176,4 @@ walking:
 controller:
     waiting_count: 10
     b_smoothing: true
-    smoothing_duration: 0.1
+    smoothing_duration: 0.2
