--- a/config/draco/pnc.yaml
+++ b/config/draco/pnc.yaml
@@ -3,8 +3,11 @@ servo_dt: 0.00125
 save_freq: 50
 ip_addr: "tcp://127.0.0.1:5557"
 
-b_exp: false
-#b_exp: true
+#b_exp: false
+b_exp: true
+
+state_estimator:
+    n_data_com_vel: [50, 50, 50]
 
 wbc:
     regularization:
@@ -20,8 +23,8 @@ wbc:
             weight: 20
             sim_kp: [200, 200, 200]
             sim_kd: [10, 10, 10]
-            exp_kp: [20, 20, 20]
-            exp_kd: [0., 0., 0.]
+            exp_kp: [15, 15, 25]
+            exp_kd: [0.3, 0.3, 0.3]
         torso_ori:
             weight: 20
             sim_kp: [100, 100, 100]
