found decent gains and make 0.5hz swinging, but stopped exp due to cable loosen issue

--- a/pnc/draco_pnc/CMakeLists.txt
+++ b/pnc/draco_pnc/CMakeLists.txt
@@ -1,5 +1,6 @@
 file(GLOB_RECURSE sources "*.cpp")
 file(GLOB draco_pnc_headers "*.hpp")
+file(GLOB draco_task_headers "draco_task/*.hpp")
 file(GLOB draco_state_machine_headers "draco_state_machine/*.hpp")
 
 add_library(pnc-draco-pnc SHARED ${sources})
@@ -18,3 +19,5 @@ install(FILES ${draco_pnc_headers} DESTINATION
     "${INSTALL_INCLUDE_DIR}/pnc/draco_pnc")
 install(FILES ${draco_state_machine_headers} DESTINATION
     "${INSTALL_INCLUDE_DIR}/pnc/draco_pnc/draco_state_machine")
+install(FILES ${draco_task_headers} DESTINATION
+    "${INSTALL_INCLUDE_DIR}/pnc/draco_pnc/draco_task")
