--- a/config/draco/pnc.yaml
+++ b/config/draco/pnc.yaml
@@ -7,7 +7,8 @@ ip_addr: "tcp://127.0.0.1:5557"
 b_exp: true
 
 state_estimator:
-    n_data_com_vel: [50, 50, 50]
+    n_data_com_vel: [100, 100, 100]
+    n_data_ang_vel: [50, 50, 50]
 
 wbc:
     regularization:
@@ -17,20 +18,23 @@ wbc:
     contact:
         rf_z_max: 1000.0
         w_rf: 0.
+        foot_half_width: 0.02
+        foot_half_length: 0.08
+        mu: 0.3
 
     task:
         com:
             weight: 20
             sim_kp: [200, 200, 200]
             sim_kd: [10, 10, 10]
-            exp_kp: [15, 15, 25]
-            exp_kd: [0.3, 0.3, 0.3]
+            exp_kp: [12, 20, 20]
+            exp_kd: [6., 5., 2.]
         torso_ori:
             weight: 20
             sim_kp: [100, 100, 100]
             sim_kd: [10, 10, 10]
-            exp_kp: [20, 20, 20]
-            exp_kd: [0, 0, 0]
+            exp_kp: [15, 15, 15]
+            exp_kd: [0.1, 0.1, 0.1]
         upper_body_joint:
             weight: 20.
             neck_pitch:
@@ -122,7 +126,7 @@ wbc:
 
 balancing:
     swaying_amp: [0., 0.05, 0.]
-    swaying_freq: [0., 0.3, 0.]
+    swaying_freq: [0., 0.5, 0.]
 
     interpolation_local_offset: [0., 0.05, 0.]
     interpolation_duration: 3.
