--- a/config/draco/pnc.yaml
+++ b/config/draco/pnc.yaml
@@ -8,18 +8,18 @@ b_exp: true
 
 state_estimator:
     n_data_com_vel: [100, 100, 100]
-    n_data_ang_vel: [50, 50, 50]
+    n_data_ang_vel: [5, 5, 5] # smaller, better
 
 wbc:
     regularization:
-        lambda_q_ddot: 1e-8
-        lambda_rf: 1e-7
+        lambda_q_ddot: 1e-7
+        lambda_rf: 1e-6
 
     contact:
         rf_z_max: 1000.0
         w_rf: 0.
-        foot_half_width: 0.02
-        foot_half_length: 0.08
+        foot_half_width: 0.02 # 0.095 m
+        foot_half_length: 0.05 # 0.055 m
         mu: 0.3
 
     task:
@@ -27,13 +27,19 @@ wbc:
             weight: 20
             sim_kp: [200, 200, 200]
             sim_kd: [10, 10, 10]
-            exp_kp: [12, 20, 20]
-            exp_kd: [6., 5., 2.]
+            #exp_kp: [12, 20, 20]
+            #exp_kd: [6., 5., 2.]
+
+            #exp_kp: [10, 15, 15]
+            #exp_kd: [2., 2., 2.]
+
+            exp_kp: [12, 15, 15]
+            exp_kd: [5., 5., 2.]
         torso_ori:
             weight: 20
             sim_kp: [100, 100, 100]
             sim_kd: [10, 10, 10]
-            exp_kp: [15, 15, 15]
+            exp_kp: [7, 7, 7]
             exp_kd: [0.1, 0.1, 0.1]
         upper_body_joint:
             weight: 20.
