--- a/config/draco/pnc.yaml
+++ b/config/draco/pnc.yaml
@@ -3,12 +3,13 @@ servo_dt: 0.00125
 save_freq: 50
 ip_addr: "tcp://127.0.0.1:5557"
 
-#b_exp: false
-b_exp: true
+b_exp: false
+#b_exp: true
 
 state_estimator:
     n_data_com_vel: [100, 100, 100]
     n_data_ang_vel: [5, 5, 5] # smaller, better
+    n_data_cam: [5, 5, 5]
 
 wbc:
     regularization:
