--- a/config/draco/pnc.yaml
+++ b/config/draco/pnc.yaml
@@ -3,11 +3,12 @@ servo_dt: 0.00125
 save_freq: 50
 ip_addr: "tcp://127.0.0.1:5557"
 
-#b_exp: false
-b_exp: true
+b_exp: false
+#b_exp: true # Enable b_smoothing at the bottom
 
 state_estimator:
-    n_data_com_vel: [100, 100, 100]
+    #n_data_com_vel: [100, 100, 100]
+    n_data_com_vel: [20, 20, 20]
     n_data_ang_vel: [5, 5, 5]
     n_data_cam: [50, 50, 50]
 
@@ -20,23 +21,31 @@ wbc:
         rf_z_max: 1000.0
         w_rf: 0.
         foot_half_width: 0.03 # 8.5 / 2 (cm)
-        foot_half_length: 0.08 # 22 / 2 (cm)
+        foot_half_length: 0.05 # 22 / 2 (cm)
         mu: 0.3
 
     task:
+        com_control_feedback_source: 1 # 0: com feedback, 1: icp feedback
         com:
             weight: 20
             sim_kp: [200, 200, 200]
             sim_kd: [10, 10, 10]
-            exp_kp: [10, 22, 10]
-            exp_kd: [1., 1., 1.]
+            exp_kp: [15, 30, 15]
+            exp_kd: [4.0, 3.0, 1.2]
+
+        icp:
+            weight: 20
+            sim_kp: [10, 10, 200]
+            sim_kd: [0, 0, 10] # x, y will be ignored
+            exp_kp: [5, 5, 15]
+            exp_kd: [0., 0., 1.2]
 
         cam:
-            weight: 0.
+            weight: 0.02
             sim_kp: [0., 0., 0.] # will be ignored
             sim_kd: [50., 50., 50.]
             exp_kp: [0., 0., 0.] # will be ignored
-            exp_kd: [10., 10., 10.]
+            exp_kd: [15., 15., 15.]
 
         torso_ori:
             weight: 20
@@ -193,6 +202,5 @@ walking:
 
 controller:
     waiting_count: 10
-    b_smoothing: true
+    b_smoothing: false
     smoothing_duration: 0.2
-    #smoothing_duration: 0.02
