--- a/config/fixed_draco/pnc.yaml
+++ b/config/fixed_draco/pnc.yaml
@@ -3,6 +3,8 @@ servo_dt: 0.00125
 save_freq: 50
 ip_addr: "tcp://127.0.0.1:5557"
 
+b_exp: true # Enable b_smoothing at the bottom
+
 wbc:
     regularization:
         lambda_q_ddot: 1e-8
@@ -54,12 +56,16 @@ wbc:
         # sim gain
         foot_pos:
             weight: 40.
-            kp: [100, 100, 330]
-            kd: [0.1, 0.1, 1.5]
+            #kp: [100, 100, 330]
+            #kd: [0.1, 0.1, 1.5]
+            kp: [0., 0., 0.]
+            kd: [0., 0., 0.]
         foot_ori:
             weight: 40.
-            kp: [20., 20., 20.]
-            kd: [0.1, 0.1, 0.1]
+            #kp: [20., 20., 20.]
+            #kd: [0.1, 0.1, 0.1]
+            kp: [0., 0., 0.]
+            kd: [0., 0., 0.]
         hand_pos:
             weight: 40.
             kp: [100, 100, 100]
@@ -110,10 +116,10 @@ behavior:
         r_wrist_ps: 0.
         l_wrist_pitch: 0.
         r_wrist_pitch: 0.
-    swaying_amp: [0., 0., 0.07]
-    swaying_freq: [0., 0., 1.5]
-    #swaying_amp: [0., 0., 0.05]
-    #swaying_freq: [0., 0., 0.7]
+    #swaying_amp: [0., 0., 0.07]
+    #swaying_freq: [0., 0., 0.5]
+    swaying_amp: [0.05, 0., 0.]
+    swaying_freq: [0.7, 0., 0.]
 
 controller:
     waiting_count: 10
