Draco static walking for real experiment added

--- a/config/draco/pnc.yaml
+++ b/config/draco/pnc.yaml
@@ -3,8 +3,8 @@ servo_dt: 0.00125
 save_freq: 50
 ip_addr: "tcp://127.0.0.1:5557"
 
-#b_exp: false
-b_exp: true # Enable b_smoothing at the bottom
+b_exp: false
+#b_exp: true # Enable b_smoothing at the bottom
 
 state_estimator:
     n_data_com_vel: [100, 100, 100]
@@ -211,6 +211,6 @@ static_walking:
 
 controller:
     waiting_count: 10
-    b_smoothing: true
-    #b_smoothing: false
+    #b_smoothing: true
+    b_smoothing: false
     smoothing_duration: 0.2
