--- a/config/draco/pnc.yaml
+++ b/config/draco/pnc.yaml
@@ -3,8 +3,8 @@ servo_dt: 0.00125
 save_freq: 50
 ip_addr: "tcp://127.0.0.1:5557"
 
-b_exp: false
-#b_exp: true # Enable b_smoothing at the bottom
+#b_exp: false
+b_exp: true # Enable b_smoothing at the bottom
 
 state_estimator:
     n_data_com_vel: [100, 100, 100]
@@ -30,8 +30,8 @@ wbc:
             weight: 20
             sim_kp: [200, 200, 200]
             sim_kd: [10, 10, 10]
-            exp_kp: [15, 30, 15]
-            exp_kd: [4.0, 3.0, 1.2]
+            exp_kp: [15, 25, 15]
+            exp_kd: [4.0, 2.5, 1.2]
 
         icp:
             weight: 20
@@ -122,15 +122,15 @@ wbc:
                 exp_kp: 5.
                 exp_kd: 0.
         foot_pos:
-            weight_at_contact: 60.
-            weight_at_swing: 40.
+            weight_at_contact: 40.
+            weight_at_swing: 20.
             sim_kp: [300., 300., 300.]
             sim_kd: [30., 30., 30.]
-            exp_kp: [100, 100, 250]
-            exp_kd: [0.1, 0.1, 1.2]
+            exp_kp: [100, 100, 200]
+            exp_kd: [0.1, 0.1, 1.]
         foot_ori:
-            weight_at_contact: 60.
-            weight_at_swing: 40.
+            weight_at_contact: 40.
+            weight_at_swing: 20.
             sim_kp: [300., 300., 300.]
             sim_kd: [30., 30., 30.]
             exp_kp: [20, 20, 20]
@@ -184,9 +184,9 @@ walking:
     ini_stand_dur: 1.
     rf_z_max_time: 0.1
 
-    #com_height: 0.73
-    com_height: 0.7
-    swing_height: 0.04
+    com_height: 0.73
+    #com_height: 0.7
+    swing_height: 0.03
 
     t_additional_ini_trans: 0.
     t_contact_trans: 0.45
@@ -201,16 +201,17 @@ walking:
     nominal_strafe_distance: 0.02
 
 static_walking:
-    moving_duration: 2.
-    com_height: 0.7
+    moving_duration: 5.
+    com_height: 0.73
+    #com_height: 0.7
 
-    swing_duration: 3.
+    swing_duration: 5.
     des_foot_x_inc_local: 0.
     des_foot_y_inc_local: 0.05
     des_foot_ori_inc_local: 0. ## degrees
 
 controller:
     waiting_count: 10
-    #b_smoothing: true
-    b_smoothing: false
+    b_smoothing: true
+    #b_smoothing: false
     smoothing_duration: 0.2
