--- a/config/draco/pnc.yaml
+++ b/config/draco/pnc.yaml
@@ -7,7 +7,7 @@ ip_addr: "tcp://127.0.0.1:5557"
 b_exp: true # Enable b_smoothing at the bottom
 
 state_estimator:
-    n_data_com_vel: [100, 100, 100]
+    n_data_com_vel: [200, 200, 200]
     #n_data_com_vel: [20, 20, 20]
     n_data_ang_vel: [5, 5, 5]
     n_data_cam: [50, 50, 50]
@@ -25,20 +25,20 @@ wbc:
         mu: 0.3
 
     task:
-        com_control_feedback_source: 0 # 0: com feedback, 1: icp feedback
+        com_control_feedback_source: 1 # 0: com feedback, 1: icp feedback
         com:
             weight: 20
             sim_kp: [200, 200, 200]
             sim_kd: [10, 10, 10]
-            exp_kp: [15, 25, 15]
-            exp_kd: [4.0, 2.5, 1.2]
+            exp_kp: [15, 30, 20]
+            exp_kd: [4.0, 3.0, 1.5]
 
         icp:
             weight: 20
             sim_kp: [10, 10, 200]
             sim_kd: [0, 0, 10] # x, y will be ignored
-            exp_kp: [5, 5, 15]
-            exp_kd: [0., 0., 1.2]
+            exp_kp: [0.6, 0.6, 20]
+            exp_kd: [0., 0., 1.5]
 
         cam:
             weight: 0.
@@ -51,8 +51,8 @@ wbc:
             weight: 20
             sim_kp: [100, 100, 100]
             sim_kd: [10, 10, 10]
-            exp_kp: [10, 10, 10]
-            exp_kd: [0.1, 0.1, 0.1]
+            exp_kp: [15, 15, 10]
+            exp_kd: [0.2, 0.2, 0.1]
 
         upper_body_joint:
             weight: 20.
@@ -157,18 +157,22 @@ walking:
         l_elbow_fe: -1.57
         r_shoulder_aa: -0.523
         r_elbow_fe: -1.57
-        l_hip_aa: 0.087
+        #l_hip_aa: 0.087
+        l_hip_aa: 0.047
         l_hip_fe: -0.785
         l_knee_fe_jp: 0.785
         l_knee_fe_jd: 0.785
         l_ankle_fe: -0.785
-        l_ankle_ie: -0.087
-        r_hip_aa: -0.087
+        #l_ankle_ie: -0.087
+        l_ankle_ie: -0.047
+        #r_hip_aa: -0.087
+        r_hip_aa: -0.047
         r_hip_fe: -0.785
         r_knee_fe_jp: 0.785
         r_knee_fe_jd: 0.785
         r_ankle_fe: -0.785
-        r_ankle_ie: 0.087
+        #r_ankle_ie: 0.087
+        r_ankle_ie: 0.047
         neck_pitch: 0.
         r_hip_ie: 0.
         l_hip_ie: 0.
@@ -184,8 +188,8 @@ walking:
     ini_stand_dur: 1.
     rf_z_max_time: 0.1
 
-    com_height: 0.73
-    #com_height: 0.7
+    #com_height: 0.73
+    com_height: 0.68
     swing_height: 0.03
 
     t_additional_ini_trans: 0.
@@ -202,8 +206,8 @@ walking:
 
 static_walking:
     moving_duration: 5.
-    com_height: 0.73
-    #com_height: 0.7
+    #com_height: 0.73
+    com_height: 0.68
 
     swing_duration: 5.
     des_foot_x_inc_local: 0.
