--- a/config/draco/pnc.yaml
+++ b/config/draco/pnc.yaml
@@ -3,12 +3,12 @@ servo_dt: 0.00125
 save_freq: 50
 ip_addr: "tcp://127.0.0.1:5557"
 
-#b_exp: false
-b_exp: true # Enable b_smoothing at the bottom
+b_exp: false
+#b_exp: true # Enable b_smoothing at the bottom
 
 state_estimator:
-    n_data_com_vel: [200, 200, 200]
-    #n_data_com_vel: [20, 20, 20]
+    #n_data_com_vel: [100, 100, 100]
+    n_data_com_vel: [20, 20, 20]
     n_data_ang_vel: [5, 5, 5]
     n_data_cam: [50, 50, 50]
 
@@ -37,8 +37,11 @@ wbc:
             weight: 20
             sim_kp: [10, 10, 200]
             sim_kd: [0, 0, 10] # x, y will be ignored
+            sim_ki: [0, 0, 0]
             exp_kp: [0.6, 0.6, 20]
             exp_kd: [0., 0., 1.5]
+            exp_ki: [0.2, 0.2, 0.]
+            time_constant: 4.
 
         cam:
             weight: 0.
@@ -216,6 +219,6 @@ static_walking:
 
 controller:
     waiting_count: 10
-    b_smoothing: true
-    #b_smoothing: false
+    #b_smoothing: true
+    b_smoothing: false
     smoothing_duration: 0.2
