--- a/config/draco/pnc.yaml
+++ b/config/draco/pnc.yaml
@@ -4,7 +4,7 @@ save_freq: 50
 ip_addr: "tcp://127.0.0.1:5557"
 
 #b_exp: false
-b_exp: true # Enable b_smoothing at the bottom
+b_exp: true # Enable b_smoothing at the bottom, n_data_com_vel
 
 state_estimator:
     n_data_com_vel: [200, 200, 200]
@@ -25,7 +25,7 @@ wbc:
         mu: 0.3
 
     task:
-        com_control_feedback_source: 0 # 0: com feedback, 1: icp feedback
+        com_control_feedback_source: 1 # 0: com feedback, 1: icp feedback
         com:
             weight: 20
             sim_kp: [200, 200, 200]
@@ -40,7 +40,7 @@ wbc:
             sim_ki: [0, 0, 0]
             exp_kp: [0.6, 0.6, 20]
             exp_kd: [0., 0., 1.5]
-            exp_ki: [0.2, 0.2, 0.]
+            exp_ki: [0., 0., 0.]
             time_constant: 4.
 
         cam:
@@ -129,8 +129,8 @@ wbc:
             weight_at_swing: 20.
             sim_kp: [300., 300., 300.]
             sim_kd: [30., 30., 30.]
-            exp_kp: [100, 100, 200]
-            exp_kd: [0.1, 0.1, 1.]
+            exp_kp: [20, 20, 20]
+            exp_kd: [0.1, 0.1, 0.1]
         foot_ori:
             weight_at_contact: 40.
             weight_at_swing: 20.
